--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /src/main/webapp/content/css/main.css
 /build/www/**
 /src/test/javascript/coverage/
-TODO.md
+/TODO.md
 
 ######################
 # Node
