--- a/src/main/docker/elasticsearch.yml
+++ b/src/main/docker/elasticsearch.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-    cxp_platform-elasticsearch:
+    randomize-paginate-elasticsearch:
         image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.3.2
         environment:
             - cluster.name=cxp_platform
@@ -15,3 +15,10 @@ services:
         ports:
             - 9200:9200
             - 9300:9300
+
+    randomize-paginate-kibana:
+        image: docker.elastic.co/kibana/kibana-oss:6.3.2
+        environment:
+            ELASTICSEARCH_URL: http://randomize-paginate-elasticsearch:9200
+        ports:
+            - 5601:5601
